# ippl-frk

./: .gitignore  CMakeLists.txt  VISUALISATION.md  cmake_eg.sh  compile_eg.sh  launch_trame_eg.sh  run_penningtrap_eg.sh
alpine/: AlpineSight.cpp  AlpineSightManager.h  BumponTailInstability.cpp  BumponTailInstabilityManager.h  CMakeLists.txt  LandauDamping.cpp  LandauDampingManager.h  ParticleContainer.hpp  PenningTrap.cpp  PenningTrapManager.h
cmake/: Dependencies.cmake
examples/collisions/: P3MHeating.hpp
fel/: FreeElectronLaser.cpp  FreeElectronLaserManager.h
src/: CMakeLists.txt  IpplCore.h
src/FEM/: DOFArray.h  DOFHandler.hpp  DOFLocations.h  Entity.h  FEMContainer.h  FEMContainer.hpp  FEMHelperStructs.h  FiniteElementSpaceTraits.h  LagrangeGlobalDOFIndices.hpp  LagrangeSpace.h  LagrangeSpace.hpp  LagrangeSpace_wFEMContainer.h  LagrangeSpace_wFEMContainer.hpp
src/FEM/Validation/: FEMCoreGridContext.h  FEMCoreGridContext.hpp  FEMDataExport.h  FEMDataExport.hpp  FEMExplicitGrid.h  FEMExplicitGrid.hpp  FEMExplicitTools.h  FEMExplicitTools.hpp  FEMMatrixFreeComparison.h  FEMMatrixFreeComparison.hpp  FEMTestDataGenerator.h  FEMTestDataGenerator.hpp
src/Field/: BareField.h  BareField.hpp  HaloCells.h  HaloCells.hpp
src/FieldLayout/: FieldLayout.h
src/Index/: Index.h  Index.hpp
src/LinearSolvers/: PCG.h
src/NBody/: Accelerator.hpp  BHPrecision.hpp  BeamDiagnostics.cpp  BeamDiagnostics.cu  BeamDiagnostics.hpp  CMakeLists.txt  GpuTimer.hpp  GravityWrapper.hpp  LeapfrogStepper.cpp  LeapfrogStepper.cu  LeapfrogStepper.hpp  NBodyManager.hpp  NBodyParticleContainer.cu  NBodyParticleContainer.hpp  NBodySolver.cpp  NBodySolver.hpp  ParticleAttrib.hpp  ParticleAttribBase.hpp  PeriodicWrap.cpp  PeriodicWrap.cu  PeriodicWrap.hpp  README.md  SphexaBHSolver.cpp  SphexaBHSolver.cu  SphexaBHSolver.hpp  SphexaParticleContainer.cpp  SphexaParticleContainer.cu  SphexaParticleContainer.hpp
src/NBody/core/: Accelerator.hpp  BHFieldLists.hpp  BHPrecision.hpp  NBodySync.cpp  ParticleAttrib.hpp  ParticleAttribBase.hpp
src/NBody/helpers/: GpuTimer.hpp  primitives_gpu.cu  primitives_gpu.h
src/NBody/physics/: BeamDiagnostics.hpp  LeapfrogStepper.hpp
src/NBody/wrappers/: GravityWrapper.hpp  NBodyKokkosView.hpp
src/Particle/: ParticleAttrib.h  ParticleAttrib.hpp  ParticleAttribBase.h  ParticleBase.h
src/PoissonSolvers/: FEMPoissonSolver_wFEMContainer.h
src/Stream/InSitu/: CMakeLists.txt  CatalystAdaptor copy.hpp  CatalystAdaptor.h  CatalystAdaptor.hpp  CatalystAdaptorSteering.hpp  CatalystVisitors.h  ProxyWriter.cpp  ProxyWriter.h  ProxyWriter.hpp
src/Stream/InSitu/catalyst_scripts/: catalystSubroutines.py  catalyst_proxy.xml  pipeline_default.py  proxy_default_config.yaml  trame_render_config.py  trame_steering_config.py  trame_vis_app.py
src/Stream/InSitu/catalyst_scripts/catalyst_extractors/: png_ext_particle.py  png_ext_sfield.py  png_ext_vfield.py
src/Stream/InSitu/catalyst_scripts/trame_app/: trame_color.py  trame_connection.py  trame_ctx.py  trame_logging.py  trame_pipeline.py  trame_render_config.py  trame_runtime.py  trame_steering_config.py
src/Stream/Registry/: CMakeLists.txt  DynamicRegistry.h  RegistryHelper.h  ViewRegistry.h  ViewRegistry.hpp  VisRegistry.h  VisRegistry.hpp  VisRegistry2 copy.h  VisRegistryRuntime copy.h  VisRegistryRuntime.h  VisRegistryRuntime.hpp  VisRegistry_mini.h
src/Types/: Vector.hpp
test/: CMakeLists.txt
test/BH/: BHRandom.hpp  CMakeLists.txt  DihDiagnostics.cu  DihDiagnostics.hpp  DisorderHeatingBH.cpp  DisorderHeatingBH.cu  DisorderHeatingBHManager.cpp  DisorderHeatingBHManager.cu  DisorderHeatingBHManager.hpp  IpplArgs.hpp  LandauDampingBH.cpp  LandauDampingBHManager.cpp  LandauDampingBHManager.cu  LandauDampingBHManager.hpp  LandauDiagnostics.cu  LandauDiagnostics.hpp  LandauInit.cu  LandauInit.hpp  README.md
test/BH/scaling/: aggregate.sbatch  plot_per_run.py  plot_precision_overlay.py  plot_scaling.py  run_bh.sbatch  run_pic.sbatch  submit_weak.sh
test/BH/scripts/: README.md  compare_dih.py  compare_landau.py
test/FEM/: CMakeLists.txt
test/FEM/FEMContainer/: CMakeLists.txt  TestFEMContainer.cpp  TestLagrangeSpace1D_wFEMContainer.cpp  TestLagrangeSpace2D_wFEMContainer.cpp
test/FEM/wFEMContainer/: CMakeLists.txt  GenerateFemTestData.cpp  GenerateLagrangeBasisSamples.cpp
test/solver/fem_wContainer/: CMakeLists.txt  PoissonConvergenceProgress.hpp  PoissonConvergenceSolutions.hpp  PoissonConvergenceSources.hpp  TestFEMPoissonSolver1D_zeroDirichlet_convergence.cpp  TestFEMPoissonSolver2D_zeroDirichlet_convergence.cpp  TestFEMPoissonSolver3D_zeroDirichlet_convergence.cpp
unit_tests/: CMakeLists.txt
unit_tests/FEM/: CMakeLists.txt  DOFHandler.cpp  FEMContainer.cpp  FEMContainerHalo.cpp  LagrangeSpace_wFEMContainer.cpp
unit_tests/FEM/wFEMContainer/: CMakeLists.txt  DOFHandler.cpp  FEMContainer.cpp  FEMpoissonSolverCG.cpp  LagrangeSpaceOperators.cpp  LagrangeSpace_firstOrder.cpp  LagrangeSpace_higherOrder.cpp
unit_tests/NBody/: CMakeLists.txt  LeapfrogDriftWrap.cpp  LeapfrogStepperBasics.cpp  LeapfrogStepperBasics.cu  NBodyContainerAttribute.cpp  NBodyContainerFieldList.cpp  NBodyContainerInjectDestroy.cpp  NBodyContainerSync.cpp  NBodySolverDirect.cu  NBodyTestUtil.hpp  PeriodicWrapKernel.cpp  PeriodicWrapKernel.cu  SphexaBHSolverDirect.cu  SphexaContainerAttribute.cpp  SphexaContainerAttribute.cu  SphexaContainerFieldList.cpp  SphexaContainerFieldList.cu  SphexaContainerSync.cpp  SphexaContainerSync.cu
